<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014.  Finley Smith -->
<!--  -->
<!-- This program is free software; you can redistribute it and/or -->
<!-- modify it under the terms of the GNU General Public License -->
<!-- as published by the Free Software Foundation; either version 2 -->
<!-- of the License, or (at your option) any later version. -->
<!--  -->
<!-- This program is distributed in the hope that it will be useful, -->
<!-- but WITHOUT ANY WARRANTY; without even the implied warranty of -->
<!-- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the -->
<!-- GNU General Public License for more details. -->
<!--  -->
<!-- You should have received a copy of the GNU General Public License -->
<!-- along with this program; if not, write to the Free Software -->
<!-- Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA. -->
<!-- Also add information on how to contact you by electronic and paper mail. -->
<resources>

    <string name="app_name">BGS App</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="action_settings">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">Welcome!</string>
    <string name="facebook">Facebook</string>
    <string name="website">Website</string>
    <string name="welcomeinfo">"is a selective boy's grammar school in Sittingbourne, with a fierce commitment to educate, inspire and prepare students academically and socially"</string>
    <string name="title_activity_about_fragment">About</string>
    <string name="news">News</string>
    <string name="canteen">Canteen Top-Up</string>
    <string name="moodle">VLE</string>
    <string name="links">Quick Links</string>
    <string name="tablet">Tablet</string>
    <string name="title_activity_splash">BGS App</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_about">About</string>
    <string name="aboutdetail">Borden Grammar School App</string>
    <string name="copyright">© 2014 Finley Smith</string>
    <string name="build">v2.1</string>
    <string name="where">Where we are</string>
    <string name="borden">"@borden  |"</string>
    <string name="error_when_retriving_data">Error.</string>
    <string name="title_activity_twitter">Twitter Feed</string>
    <string name="title_activity_privacy">Privacy Policy</string>
    <string name="title_changelog">Change log</string>
    <string name="changelog_close">Close</string>
    <string name="des">The offical app for Borden Grammar School</string>
    <string name="wig">BGSWidget</string>
    <string name="tweeterror">Could not refresh tweets from Borden Grammar</string>
    <string name="privacy">We use technologies like cookies (small files stored by your browser), web beacons, or unique device identifiers to anonymously identify your computer or device so we can deliver a better experience. Our systems also log information like your browser, operating system and IP address.

We do not collect personally identifiable information about you. In other words, we do not collect information such as your name, address, phone number or email address.
To customize our service for you, we may collect and store your precise geographic location as part of your user profile. This data generally is not shared with others. We may ask for your consent on your first use of the service.
You can sign into your account to see or delete any personally identifiable information we have stored, such as your name, address, email or phone number. You can also contact us by email to request to see or delete this information.
Our systems are designed to retain log data for up to 10 decades after it is collected. We remove personally identifiable information (such as your name, address, email or phone number) and other preferences associated with your account promptly after you delete your account.
We generally do not share personally identifiable information (such as name, address, email or phone) with other companies.
We do not allow advertising companies to collect data through our service for ad targeting.
We take reasonable administrative, physical and electronic measures designed to safeguard and protect your information from unauthorized access or disclosure. This includes utilizing Secure Sockets Layer (SSL) software, which encrypts the personal information you input, and storing your information in encrypted form behind a firewall designed to block access from outside our network. However, no security or encryption method can be guaranteed to protect information from hackers or human error.
To operate the service, we also may make identifiable and anonymous information available to third parties in these limited circumstances: (1) with your express consent, (2) when we have a good faith belief it is required by law, (3) when we have a good faith belief it is necessary to protect our rights or property, or (4) to any successor or purchaser in a merger, acquisition, liquidation, dissolution or sale of assets. Your consent will not be required for disclosure in these cases, but we will attempt to notify you, to the extent permitted by law to do so.
Information we collect may be stored or processed on computers located in any country where we do business.
This privacy policy was last updated on 5/4/14. Our privacy policy may change from time to time. If we make any material changes to our policies, we will place a prominent notice on our website or application. If the change materially affects registered users, we will send a notice to you by email, push notification or text.




If you have any questions or concerns about our privacy policies, please contact us: school@bordengrammar.kent.sch.uk</string>
    <string name="title_activity_licenses">Licenses</string>

</resources>
