<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_feedback"
        android:title="Send feedback"
        android:orderInCategory="100"
        android:showAsAction="never"/>
    <!-- Facebook, should appear as action button -->
    <item android:id="@+id/facebook"
          android:icon="@drawable/ic_facebook"
          android:title="@string/facebook"
          android:showAsAction="ifRoom" />
    <!--  Website : websites.bordengrammar.kent.sch.uk -->
    <item android:id="@+id/website"
          android:icon="@drawable/ic_action_web_site"
          android:title="@string/website"
          android:showAsAction="ifRoom" />

</menu>
