<ScrollView
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/scrollView">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="match_parent"
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:weightSum="1"
		android:clickable="false">

	<ImageView
		android:layout_width="131dp"
		android:layout_height="131dp"
		android:id="@+id/imageView"
		android:layout_gravity="center_horizontal"
		android:src="@drawable/logo"
		android:layout_marginTop="25dp"
		android:contentDescription="@string/app_name"
		android:clickable="false"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:text="@string/aboutdetail"
		android:id="@+id/textView"
		android:layout_gravity="center_horizontal"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="10dp"
		android:text="@string/copyright"
		android:id="@+id/textView2"
		android:layout_gravity="center"
		android:layout_marginTop="-2dip"/>

	<RelativeLayout
		android:layout_width="325dip"
		android:layout_height="2dip"
		android:background="#b7bac0"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="10dip">
	</RelativeLayout>

	<TableRow
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dip"
		android:layout_gravity="center_horizontal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/website"
			android:id="@+id/textView3"
			android:layout_marginRight="50dp"
			android:password="false"
			android:phoneNumber="false"
			android:singleLine="false"
			android:clickable="true"
			android:onClick="website"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/facebook"
			android:id="@+id/textView4"
			android:clickable="true"
			android:onClick="facebook"/>
	</TableRow>

	<Button
		style="?android:attr/buttonStyleSmall"
		android:layout_width="188dp"
		android:layout_height="35dp"
		android:text="Source Code on GitHub"
		android:id="@+id/button"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="30dp"
		android:onClick="sourcecode"
		/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/build"
			android:id="@+id/textView5"
			android:layout_gravity="center_horizontal|bottom"
			android:layout_marginTop="25dip"
			android:textColor="@color/darkgray"/>

	</LinearLayout>






</ScrollView>