<ScrollView
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/main_selector"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/scrollView"
	tools:context=".MainActivity">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:clickable="false"
		>

		<ImageView
			android:layout_width="125dp"
			android:layout_height="163dp"
			android:id="@+id/imageView"
			android:layout_gravity="center_horizontal"
			android:src="@drawable/logo"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="BGS App"
			android:id="@+id/title"
			android:layout_gravity="center_horizontal"
			android:textColor="#fffffc"
			android:textSize="48dp"/>

		<TextView
			android:id="@+id/info"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/welcomeinfo"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textColor="#FFFFFF"
			android:layout_marginLeft="25dp"
			android:layout_marginRight="25dp"/>

		<TextView
			android:id="@+id/wheretitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentTop="true"
			android:text="@string/where"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:onClick="getDriving()"
			android:layout_gravity="center_horizontal"
			android:textColor="#FFFFFF"/>
		<fragment
			android:id="@+id/map"
			android:layout_width="333dp"
			android:layout_height="250dp"
			class="com.google.android.gms.maps.SupportMapFragment"
			android:layout_gravity="center_horizontal"/>

		<Button
			android:layout_width="match_parent"
			android:layout_height="36dp"
			android:text="Get Directions"
			android:id="@+id/button"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="50dp"
			android:onClick="getDriving()"/>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:text="Borden Grammar School"
				android:id="@+id/textView5"
				android:layout_marginLeft="10dp"
				android:textStyle="bold"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:text="@string/borden"
				android:id="@+id/textView6"
				android:layout_marginLeft="5dp"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:id="@+id/textView7"
				android:layout_marginLeft="5dp"/>
		</LinearLayout>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Could not fetch twitter feed"
			android:id="@+id/textView3"
			android:layout_gravity="center_horizontal|left"
			android:textSize="20sp"
			android:layout_marginTop="0dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="50dp"/>
	</LinearLayout>
</ScrollView>
